# openwrt-ssd20x

./: README.md
18.06/: Makefile
18.06/include/: cmake.mk  kernel-defaults.mk  target.mk  toplevel.mk
18.06/package/: Makefile
18.06/package/esp8089/: Makefile
18.06/package/esp8089/files/: esp-net.hotplug  esp-wifi  esp8089-load
18.06/package/esp8089/src/: Kconfig  Makefile  Makefile.old  README.md  eagle_fw1.h  eagle_fw2.h  esp_ctrl.c  esp_ctrl.h  esp_debug.c  esp_debug.h  esp_ext.c  esp_ext.h  esp_file.c  esp_file.h  esp_init_data.h  esp_io.c  esp_mac80211.c  esp_mac80211.h  esp_main.c  esp_path.h  esp_pub.h  esp_sif.h  esp_sip.c  esp_sip.h  esp_utils.c  esp_utils.h  esp_wl.h  esp_wmac.h  sdio_sif_esp.c  sdio_stub.c  sip2_common.h  slc_host_register.h
18.06/package/network/services/uhttpd/src/: CMakeLists.txt  auth.c  cgi.c  client.c  file.c  handler.c  listen.c  lua.c  main.c  mimetypes.h  plugin.c  plugin.h  proc.c  process.c  process.h  relay.c  session-test.sh  tls.c  tls.h  ubus.c  uhttpd.h  utils.c  utils.h
18.06/package/sigmastar/sstar-airplay/: Makefile
18.06/package/sigmastar/sstar-airplay/src/internal/: CMakeLists.txt  build_sample.sh
18.06/package/sigmastar/sstar-airplay/src/internal/include/: audiostream.h  blitutil.h  demux.h  frame.h  interface.h  packet.h  player.h  videostream.h
18.06/package/sigmastar/sstar-airplay/src/internal/src/: CMakeLists.txt  audiostream.c  blitutil.c  demux.c  frame.c  interface.c  packet.c  player.c  videostream.c
18.06/package/sigmastar/sstar-ffmpeg/: Makefile
18.06/package/sigmastar/sstar-init/: Config.in  Makefile
18.06/package/sigmastar/sstar-mpp/: Makefile
18.06/package/sigmastar/sstar-wifi/: Makefile
18.06/package/sigmastar/tinyalsa/: Makefile
18.06/package/sigmastar/uboot-sstar/: Makefile
18.06/package/utils/busybox/: Makefile
18.06/package/utils/lua/: Makefile
18.06/package/wt/lte-air724/: Makefile
18.06/package/wt/phaomqtt/: Makefile
18.06/package/wt/wapi/: Makefile
18.06/scripts/: wtconfig.sh
18.06/tools/: mxpgenerator
18.06/wtconfig/: WT2011  WT2015  WT2020  WT2022  wt_4g  wt_base  wt_esp8089  wt_fs_fat  wt_icplus_phy  wt_leds  wt_liblvgl  wt_router  wt_sstar_emac  wt_sstar_kernel  wt_sstar_mmc  wt_sstar_mpp  wt_sstar_toolchain  wt_sstar_usb  wt_sstar_wifi  wt_usb_storage
SpinandPackBinTool-openwrt/: SPINAND_FS35ND04G.ini
SpinandPackBinTool-openwrt/images/: logo
SpinandPackBinTool-openwrt/images/scripts/: [[cis.es  [[kernel.es  [[logo.es  [[rootfs.es  [[uboot.es
SpinandPackBinTool-openwrt/wt/logo/: SSD201
sigmastar/kernel/4.9.84/: .gitignore  .sstar_chip.txt  Makefile  build_kernel.sh  list_config.sh  makefile_bak  ms_pack_modules.sh  release_kernel_to_alkaid.sh
sigmastar/kernel/4.9.84/crypto/: algboss.c
sigmastar/kernel/4.9.84/drivers/: Kconfig  Makefile
sigmastar/kernel/4.9.84/fs/: inode.c
sigmastar/kernel/4.9.84/init/: initramfs.c  main.c
sigmastar/kernel/4.9.84/kernel/: cpu.c  params.c  softirq.c  watchdog.c
sigmastar/kernel/4.9.84/lib/: Kconfig
sigmastar/kernel/4.9.84/mm/: mlock.c  mmap.c  page-writeback.c  readahead.c  slub.c  vmalloc.c
sigmastar/kernel/4.9.84/scripts/: mkimage  ms_bin_option_get_int.py  ms_bin_option_update_int.py  ms_builtin_dtb_update.py  ms_gen_ceva_version_h.py  ms_gen_mvxv_h.py  mz  setlocalversion
sigmastar/sstar-mp3player/: Makefile
sigmastar/sstar-mp3player/src/: Makefile  main.c  user_audio.c  user_audio.h
sigmastar/sstar-mpp/files/M128/: mmap.ini
sigmastar/sstar-mpp/files/config/: config_tool  dump_config  riu_w
sigmastar/sstar-wifi/files/: sstar-wifi
sigmastar/tools/SpinandPackBinTool-openwrt/: SPINAND_DOSILOCON.INI  SPINAND_FS35ND01G.ini  SPINAND_FS35ND02G.ini  SPINAND_WINBOND.INI  SstarMakeBin  auto_update_spinand.txt  build.sh  flush.txt  leap.def  readme.txt  snchk.def
sigmastar/tools/rawgenerator/: Makefile
(+2380 files in other folders)
